# typhoon-stac-bigdata

./: .gitignore  README.md  main.py  pyproject.toml  stac_catalog.json
STAC_catalog/gaemi/gaemi-qpesums-zarr/gaemi-accum-rainfall/: gaemi-accum-rainfall.json
STAC_catalog/gaemi/gaemi-qpesums-zarr/gaemi-vil/: gaemi-vil.json
STAC_catalog/kong-rey/kong-rey-landcover/kong-rey-landcover-kong-rey-event-inventory-2024-ardswc-v7/: kong-rey-landcover-kong-rey-event-inventory-2024-ardswc-v7.json
STAC_catalog/kong-rey/kong-rey-qpesums-zarr/kong-rey-echotop-45/: kong-rey-echotop-45.json
STAC_catalog/kong-rey/kong-rey-qpesums-zarr/kong-rey-rain-rate/: kong-rey-rain-rate.json
STAC_catalog/krathon/krathon-qpesums-zarr/krathon-echotop-45/: krathon-echotop-45.json
STAC_catalog/krathon/krathon-qpesums-zarr/krathon-maxdbz/: krathon-maxdbz.json
STAC_catalog/krathon/krathon-qpesums-zarr/krathon-rain-rate/: krathon-rain-rate.json
STAC_catalog/usagi/usagi-landcover/usagi-landcover-usagi-event-inventory-2024-ardswc-v7/: usagi-landcover-usagi-event-inventory-2024-ardswc-v7.json
STAC_catalog/usagi/usagi-qpesums-zarr/usagi-accum-rainfall/: usagi-accum-rainfall.json
STAC_catalog/usagi/usagi-qpesums-zarr/usagi-echotop-18/: usagi-echotop-18.json
STAC_catalog/usagi/usagi-qpesums-zarr/usagi-maxdbz/: usagi-maxdbz.json
STAC_catalog/usagi/usagi-qpesums-zarr/usagi-rain-rate/: usagi-rain-rate.json
STAC_catalog_01/gaemi/gaemi-qpesums-zarr/gaemi-echotop-18/: gaemi-echotop-18.json
backend/: app.py  render.py  stac.py
frontend/static/: app.js  styles.css
(+14 files in other folders)
