[project]
name = "finalproject"
version = "0.1.0"
description = "QPESUMS 3D radar Zarr conversion, typhoon-event export, and chunk benchmark scripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.9.0",
    "dask[distributed]>=2026.3.0",
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "numcodecs==0.15.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "xarray>=2026.2.0",
    "zarr>=3.0.0",
]
